--- a/static/styles.css
+++ b/static/styles.css
@@ -50,7 +50,29 @@ h1 {
     color: red;
 }
 
+.Error h1 {
+    color: darkred;
+    font-weight: bold;
+    font-size: 1em;
+}
+
 button {
     margin: 40px;
     font-size: 1.6em;
+}
+
+.overlay{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  background-color: rgba(0,0,0,0.9); /*dim the background*/
+}
+
+.centerMessage {
+    width: 480px;
+    height: 320px;
+    margin: auto;
 }
